pruebas ajax menu + links

--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
 		<div id="bottom-menu">
 			<div class="row">
 				<div class="col-3">
-					<a href=#>Nuevo ingreso</a>
+					<a href="#">Nuevo ingreso</a>
 				</div>
 				<div class="col-3">
-					<a href=#>Nueva salida</a>
+					<a href="#">Nueva salida</a>
 				</div>
 				<div class="col-3">
-					<a href=#>Ver registros</a>
+					<a href="/registros.html" class="registros-link">Ver registros</a>
 				</div>
 				<div class="col-3">
-					<a href=#>Configuración</a>
+					<a href="#">Configuración</a>
 				</div>
 			</div>
 		</div>
@@ -98,6 +98,7 @@
 					</nav>
 
 				<!-- Banner -->
+					<div id="content-area">
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
@@ -154,7 +155,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="registros.html" class="link">Ver todos los registros</a></h3>
+										<h3><a class="link registros-link" id="registros-link">Ver todos los registros</a></h3>
 									</header>
 								</article>
 								<article>
@@ -179,13 +180,14 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Como usar la app</a></h3>
+										<h3><a href="elements.html" class="link">Como usar la app</a></h3>
 										<p>Ver la documentación</p>
 									</header>
 								</article>
 							</section>
 
 
+					</div>
 					</div>
 
 
@@ -200,7 +202,7 @@
 								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Matías Prego</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Matías Prego</li><li>2020</a></li>
 							</ul>
 						</div>
 					</footer>
