--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
 		<div id="bottom-menu">
 			<div class="row">
 				<div class="col-3">
-					<a href="#">Nuevo ingreso</a>
+					<a href="#" id="AddEntrada">Nuevo ingreso</a>
 				</div>
 				<div class="col-3">
-					<a href="#">Nueva salida</a>
+					<a href="#" id="AddSalida">Nueva salida</a>
 				</div>
 				<div class="col-3">
 					<a href="/registros.html" class="registros-link">Ver registros</a>
 				</div>
 				<div class="col-3">
-					<a href="#">Configuración</a>
+					<a href="/configuracion.html">Configuración</a>
 				</div>
 			</div>
 		</div>
@@ -86,14 +86,10 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Inicio</a></li>
-							<li><a href="registros.html">Registros</a></li>
-							<li><a href="balance.html">Balance</a></li>
-							<li><a href="configuracion.html">Configuración</a></li>
-						</ul>
-						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Nuevo +</a></li>
-							<li><a href="#" class="button fit">Ingresar</a></li>
+							<li><a href="/index.html">Inicio</a></li>
+							<li><a href="/registros.html">Registros</a></li>
+							<li><a href="/balance.html">Balance</a></li>
+							<li><a href="/configuracion.html">Configuración</a></li>
 						</ul>
 					</nav>
 
@@ -155,7 +151,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a class="link registros-link" id="registros-link">Ver todos los registros</a></h3>
+										<h3><a href="/registros.html" class="link registros-link" id="registros-link">Ver todos los registros</a></h3>
 									</header>
 								</article>
 								<article>
@@ -163,7 +159,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="balance.html" class="link">Ver balance</a></h3>
+										<h3><a href="/balance.html" class="link">Ver balance</a></h3>
 									</header>
 								</article>
 								<article>
@@ -171,7 +167,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="configuracion.html" class="link">Configuración</a></h3>
+										<h3><a href="/configuracion.html" class="link">Configuración</a></h3>
 										<p>Los seteos claves</p>
 									</header>
 								</article>
@@ -180,7 +176,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="elements.html" class="link">Como usar la app</a></h3>
+										<h3><a href="/elements.html" class="link">Como usar la app</a></h3>
 										<p>Ver la documentación</p>
 									</header>
 								</article>
