function para carga

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="/index.html">Inicio</a></li>
+							<li><a href="/inicio.html">Inicio</a></li>
 							<li><a href="/registros.html">Registros</a></li>
 							<li><a href="/balance.html">Balance</a></li>
 							<li><a href="/configuracion.html">Configuración</a></li>
@@ -151,7 +151,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="/registros.html" class="link registros-link" id="registros-link">Ver todos los registros</a></h3>
+										<h3><a href="/registros.html" class="link" id="registros-link">Ver todos los registros</a></h3>
 									</header>
 								</article>
 								<article>
