--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="/inicio.html">Inicio</a></li>
+							<li><a href="/principal.html">Inicio</a></li>
 							<li><a href="/registros.html">Registros</a></li>
 							<li><a href="/balance.html">Balance</a></li>
 							<li><a href="/configuracion.html">Configuración</a></li>
