change click functions

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div id="overlay">
 			<div class="inner">
 				<div class="center">
-					<a href="#" class="button" id="CloseBtn">Cerrar</a>
+					<a href="#" class="button CloseBtn">Cerrar</a>
 				</div>
 			
 				<form id="form-entry" action="/action_page.php">
@@ -59,10 +59,10 @@
 		<div id="bottom-menu">
 			<div class="row">
 				<div class="col-3">
-					<a href="#" id="AddEntrada">Nuevo ingreso</a>
+					<a href="#" class="AddEntrada">Nuevo ingreso</a>
 				</div>
 				<div class="col-3">
-					<a href="#" id="AddSalida">Nueva salida</a>
+					<a href="#" class="AddSalida">Nueva salida</a>
 				</div>
 				<div class="col-3">
 					<a href="/registros.html" class="simple-link">Ver registros</a>
@@ -103,7 +103,7 @@
 							<div class="content">
 								<p>Estimá tus gastos e ingresos anuales y planificá tu vida freelance.</p>
 								<ul class="actions">
-									<li><a href="#" class="button next scrolly" id="AddBtn">Nuevo +</a></li>
+									<li><a href="#" class="button next scrolly AddBtn">Nuevo +</a></li>
 								</ul>
 							</div>
 							<div class="data-box">
@@ -135,7 +135,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="#" id="AddSalida">Nuevo gasto</a></h3>
+										<h3><a href="#" class="AddSalida">Nuevo gasto</a></h3>
 									</header>
 								</article>
 								<article>
@@ -143,7 +143,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="#" id="AddEntrada">Nuevo ingreso</a></h3>
+										<h3><a href="#" class="AddEntrada">Nuevo ingreso</a></h3>
 									</header>
 								</article>
 								<article>
@@ -211,6 +211,7 @@
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
 			<script src="assets/js/funciones.js"></script>
