--- a/principal.html
+++ b/principal.html
@@ -6,7 +6,7 @@
         <div class="content">
             <p>Estimá tus gastos e ingresos anuales y planificá tu vida freelance.</p>
             <ul class="actions">
-                <li><a href="#" class="button next scrolly" id="AddBtn">Nuevo +</a></li>
+                <li><a href="#" class="button next scrolly AddBtn">Nuevo +</a></li>
             </ul>
         </div>
         <div class="data-box">
@@ -27,63 +27,61 @@
         </div>
     </div>
 </section>
-
-<!-- Main -->
 <div id="main">
 
-    <!-- One -->
-        <section id="one" class="tiles">
-            <article>
-                <span class="image">
-                    <img src="images/pic01.jpg" alt="" />
-                </span>
-                <header class="major">
-                    <h3><a href="#" id="AddSalida">Nuevo gasto</a></h3>
-                </header>
-            </article>
-            <article>
-                <span class="image">
-                    <img src="images/pic02.jpg" alt="" />
-                </span>
-                <header class="major">
-                    <h3><a href="#" id="AddEntrada">Nuevo ingreso</a></h3>
-                </header>
-            </article>
-            <article>
-                <span class="image">
-                    <img src="images/pic03.jpg" alt="" />
-                </span>
-                <header class="major">
-                    <h3><a href="/registros.html" class="link simple-link" id="registros-link">Ver todos los registros</a></h3>
-                </header>
-            </article>
-            <article>
-                <span class="image">
-                    <img src="images/pic04.jpg" alt="" />
-                </span>
-                <header class="major">
-                    <h3><a href="/balance.html" class="link simple-link">Ver balance</a></h3>
-                </header>
-            </article>
-            <article>
-                <span class="image">
-                    <img src="images/pic05.jpg" alt="" />
-                </span>
-                <header class="major">
-                    <h3><a href="/configuracion.html" class="link simple-link">Configuración</a></h3>
-                    <p>Los seteos claves</p>
-                </header>
-            </article>
-            <article>
-                <span class="image">
-                    <img src="images/pic06.jpg" alt="" />
-                </span>
-                <header class="major">
-                    <h3><a href="/elements.html" class="link simple-link">Como usar la app</a></h3>
-                    <p>Ver la documentación</p>
-                </header>
-            </article>
-        </section>
+						<!-- One -->
+                        <section id="one" class="tiles">
+                            <article>
+                                <span class="image">
+                                    <img src="images/pic01.jpg" alt="" />
+                                </span>
+                                <header class="major">
+                                    <h3><a href="#" class="AddSalida">Nuevo gasto</a></h3>
+                                </header>
+                            </article>
+                            <article>
+                                <span class="image">
+                                    <img src="images/pic02.jpg" alt="" />
+                                </span>
+                                <header class="major">
+                                    <h3><a href="#" class="AddEntrada">Nuevo ingreso</a></h3>
+                                </header>
+                            </article>
+                            <article>
+                                <span class="image">
+                                    <img src="images/pic03.jpg" alt="" />
+                                </span>
+                                <header class="major">
+                                    <h3><a href="/registros.html" class="link simple-link" id="registros-link">Ver todos los registros</a></h3>
+                                </header>
+                            </article>
+                            <article>
+                                <span class="image">
+                                    <img src="images/pic04.jpg" alt="" />
+                                </span>
+                                <header class="major">
+                                    <h3><a href="/balance.html" class="link simple-link">Ver balance</a></h3>
+                                </header>
+                            </article>
+                            <article>
+                                <span class="image">
+                                    <img src="images/pic05.jpg" alt="" />
+                                </span>
+                                <header class="major">
+                                    <h3><a href="/configuracion.html" class="link simple-link">Configuración</a></h3>
+                                    <p>Los seteos claves</p>
+                                </header>
+                            </article>
+                            <article>
+                                <span class="image">
+                                    <img src="images/pic06.jpg" alt="" />
+                                </span>
+                                <header class="major">
+                                    <h3><a href="/elements.html" class="link simple-link">Como usar la app</a></h3>
+                                    <p>Ver la documentación</p>
+                                </header>
+                            </article>
+                        </section>
 
 
-</div>
+					</div>
