--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 					<a href="#" class="AddSalida">Nueva salida</a>
 				</div>
 				<div class="col-3">
-					<a href="/registros.html" class="simple-link">Ver registros</a>
+					<a href="registros.html" class="simple-link">Ver registros</a>
 				</div>
 				<div class="col-3">
-					<a href="/configuracion.html" class="simple-link">Configuración</a>
+					<a href="configuracion.html" class="simple-link">Configuración</a>
 				</div>
 			</div>
 		</div>
@@ -86,10 +86,10 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="/principal.html">Inicio</a></li>
-							<li><a href="/registros.html">Registros</a></li>
-							<li><a href="/balance.html">Balance</a></li>
-							<li><a href="/configuracion.html">Configuración</a></li>
+							<li><a href="principal.html">Inicio</a></li>
+							<li><a href="registros.html">Registros</a></li>
+							<li><a href="balance.html">Balance</a></li>
+							<li><a href="configuracion.html">Configuración</a></li>
 						</ul>
 					</nav>
 
@@ -151,7 +151,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="/registros.html" class="link simple-link" id="registros-link">Ver todos los registros</a></h3>
+										<h3><a href="registros.html" class="link simple-link" id="registros-link">Ver todos los registros</a></h3>
 									</header>
 								</article>
 								<article>
@@ -159,7 +159,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="/balance.html" class="link simple-link">Ver balance</a></h3>
+										<h3><a href="balance.html" class="link simple-link">Ver balance</a></h3>
 									</header>
 								</article>
 								<article>
@@ -167,7 +167,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="/configuracion.html" class="link simple-link">Configuración</a></h3>
+										<h3><a href="configuracion.html" class="link simple-link">Configuración</a></h3>
 										<p>Los seteos claves</p>
 									</header>
 								</article>
@@ -176,7 +176,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="/elements.html" class="link simple-link">Como usar la app</a></h3>
+										<h3><a href="elements.html" class="link simple-link">Como usar la app</a></h3>
 										<p>Ver la documentación</p>
 									</header>
 								</article>
