--- a/principal.html
+++ b/principal.html
@@ -52,7 +52,7 @@
                                     <img src="images/pic03.jpg" alt="" />
                                 </span>
                                 <header class="major">
-                                    <h3><a href="/registros.html" class="link simple-link" id="registros-link">Ver todos los registros</a></h3>
+                                    <h3><a href="registros.html" class="link simple-link" id="registros-link">Ver todos los registros</a></h3>
                                 </header>
                             </article>
                             <article>
@@ -60,7 +60,7 @@
                                     <img src="images/pic04.jpg" alt="" />
                                 </span>
                                 <header class="major">
-                                    <h3><a href="/balance.html" class="link simple-link">Ver balance</a></h3>
+                                    <h3><a href="balance.html" class="link simple-link">Ver balance</a></h3>
                                 </header>
                             </article>
                             <article>
@@ -68,7 +68,7 @@
                                     <img src="images/pic05.jpg" alt="" />
                                 </span>
                                 <header class="major">
-                                    <h3><a href="/configuracion.html" class="link simple-link">Configuración</a></h3>
+                                    <h3><a href="configuracion.html" class="link simple-link">Configuración</a></h3>
                                     <p>Los seteos claves</p>
                                 </header>
                             </article>
@@ -77,7 +77,7 @@
                                     <img src="images/pic06.jpg" alt="" />
                                 </span>
                                 <header class="major">
-                                    <h3><a href="/elements.html" class="link simple-link">Como usar la app</a></h3>
+                                    <h3><a href="elements.html" class="link simple-link">Como usar la app</a></h3>
                                     <p>Ver la documentación</p>
                                 </header>
                             </article>
