--- a/principal.html
+++ b/principal.html
@@ -27,61 +27,76 @@
         </div>
     </div>
 </section>
+
+<!-- Main -->
 <div id="main">
 
-						<!-- One -->
-                        <section id="one" class="tiles">
-                            <article>
-                                <span class="image">
-                                    <img src="images/pic01.jpg" alt="" />
-                                </span>
-                                <header class="major">
-                                    <h3><a href="#" class="AddSalida">Nuevo gasto</a></h3>
-                                </header>
-                            </article>
-                            <article>
-                                <span class="image">
-                                    <img src="images/pic02.jpg" alt="" />
-                                </span>
-                                <header class="major">
-                                    <h3><a href="#" class="AddEntrada">Nuevo ingreso</a></h3>
-                                </header>
-                            </article>
-                            <article>
-                                <span class="image">
-                                    <img src="images/pic03.jpg" alt="" />
-                                </span>
-                                <header class="major">
-                                    <h3><a href="registros.html" class="link simple-link" id="registros-link">Ver todos los registros</a></h3>
-                                </header>
-                            </article>
-                            <article>
-                                <span class="image">
-                                    <img src="images/pic04.jpg" alt="" />
-                                </span>
-                                <header class="major">
-                                    <h3><a href="balance.html" class="link simple-link">Ver balance</a></h3>
-                                </header>
-                            </article>
-                            <article>
-                                <span class="image">
-                                    <img src="images/pic05.jpg" alt="" />
-                                </span>
-                                <header class="major">
-                                    <h3><a href="configuracion.html" class="link simple-link">Configuración</a></h3>
-                                    <p>Los seteos claves</p>
-                                </header>
-                            </article>
-                            <article>
-                                <span class="image">
-                                    <img src="images/pic06.jpg" alt="" />
-                                </span>
-                                <header class="major">
-                                    <h3><a href="elements.html" class="link simple-link">Como usar la app</a></h3>
-                                    <p>Ver la documentación</p>
-                                </header>
-                            </article>
-                        </section>
+    <!-- One -->
+        <section id="one" class="tiles">
+            <article>
+                <span class="image">
+                    <img src="images/pic01.jpg" alt="" />
+                </span>
+                <header class="major">
+                    <h3><a href="#" class="AddSalida">Nuevo gasto</a></h3>
+                </header>
+            </article>
+            <article>
+                <span class="image">
+                    <img src="images/pic02.jpg" alt="" />
+                </span>
+                <header class="major">
+                    <h3><a href="#" class="AddEntrada">Nuevo ingreso</a></h3>
+                </header>
+            </article>
+            <article>
+                <span class="image">
+                    <img src="images/pic03.jpg" alt="" />
+                </span>
+                <header class="major">
+                    <h3><a href="registros.html" class="link simple-link" id="registros-link">Ver todos los registros</a></h3>
+                </header>
+            </article>
+            <article>
+                <span class="image">
+                    <img src="images/pic04.jpg" alt="" />
+                </span>
+                <header class="major">
+                    <h3><a href="balance.html" class="link simple-link">Ver balance</a></h3>
+                </header>
+            </article>
+            <article>
+                <span class="image">
+                    <img src="images/pic05.jpg" alt="" />
+                </span>
+                <header class="major">
+                    <h3><a href="configuracion.html" class="link simple-link">Configuración</a></h3>
+                    <p>Los seteos claves</p>
+                </header>
+            </article>
+            <article>
+                <span class="image">
+                    <img src="images/pic06.jpg" alt="" />
+                </span>
+                <header class="major">
+                    <h3><a href="elements.html" class="link simple-link">Como usar la app</a></h3>
+                    <p>Ver la documentación</p>
+                </header>
+            </article>
+        </section>
 
 
-					</div>
+</div>
+
+<!-- Scripts -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/jquery.scrolly.min.js"></script>
+<script src="assets/js/jquery.scrollex.min.js"></script>
+<script src="assets/js/browser.min.js"></script>
+<script src="assets/js/breakpoints.min.js"></script>
+<script src="assets/js/util.js"></script>
+<script src="assets/js/main.js"></script>
+
+<script src="assets/js/funciones.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
