--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
 				</div>
 			
 				<form id="form-entry" action="/action_page.php">
+					<p>Descripción</p>
+					<input id="nombre" type="text" name="nombre" placeholder="Ingrese la descripción..." /><br />
 					<p>Seleccione el tipo:</p>
 					<input id="entrada" type="radio" name="tipoDato" value="entrada" />
 					<label class="opcion-radio entrada-radio" for="entrada"></label>
 					<input id="salida" type="radio" name="tipoDato" value="salida" />
-					<label class="opcion-radio salida-radio"for="salida"></label><br /><br />
+					<label class="opcion-radio salida-radio"for="salida"></label><br />
 						Cantidad<input type="text" name="amount"><br>
 					<div class="row">
 						<div class="column">
