fix calculo anual

--- a/principal.html
+++ b/principal.html
@@ -16,7 +16,7 @@
                     <h2><span class="moneda">USD</span> 2500</h2>
                 </div>
                 <div class="col-6">
-                    Ingresos actuales:
+                    Ingresos mensuales actuales:
                     <h2><span class="moneda">USD</span> 4000</h2>
                 </div>
             </div>
