--- a/index.html
+++ b/index.html
@@ -60,17 +60,14 @@
 		<!-- Mobile Menu box -->
 		<div id="bottom-menu">
 			<div class="row">
-				<div class="col-3">
+				<div class="col-4">
 					<a href="#" class="AddEntrada">Nuevo ingreso</a>
 				</div>
-				<div class="col-3">
+				<div class="col-4">
 					<a href="#" class="AddSalida">Nueva salida</a>
 				</div>
-				<div class="col-3">
+				<div class="col-4">
 					<a href="registros.html" class="simple-link">Ver registros</a>
-				</div>
-				<div class="col-3">
-					<a href="configuracion.html" class="simple-link">Configuración</a>
 				</div>
 			</div>
 		</div>
@@ -104,11 +101,10 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://twitter.com/thepregoman" class="icon brands alt fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
+								<li><a href="https://instagram.com/thepregoman" class="icon brands alt fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+								<li><a href="https://github.com/matiasprego/" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/matiasprego/" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Matías Prego</li><li>2020</a></li>
