fix botones + borrar monedas porque no llego

--- a/balance.html
+++ b/balance.html
@@ -21,7 +21,9 @@
 	<!-- One -->
 		<section id="one">
 			<div class="inner">
-				<div id="piechart"></div>
+				<h2>Por mes te entran: </h2>
+				<h2>Mientras que todos los meses salen: </h2>
+				<h2>Por lo que el balance es: </h2>
 			</div>
 		</section>
 
