--- a/registros.html
+++ b/registros.html
@@ -12,7 +12,7 @@
 		</header>
 		<div class="content">
 			<p>Revisá, actualizá tus entradas</p>
-			<a href="#one" class="button next scrolly" onclick="nuevaFila()">Nuevo +</a>
+			<a href="#one" class="button next scrolly" onclick="nuevoIngreso()">Nuevo +</a>
 		</div>
 	</div>
 </section>
