--- a/balance.html
+++ b/balance.html
@@ -24,6 +24,7 @@
 				<h2>Por mes te entran: </h2>
 				<h2>Mientras que todos los meses salen: </h2>
 				<h2>Por lo que el balance es: </h2>
+				<h1 id="mensaje"></h1>
 			</div>
 		</section>
 
