fixes casi finales

--- a/balance.html
+++ b/balance.html
@@ -21,10 +21,9 @@
 	<!-- One -->
 		<section id="one">
 			<div class="inner">
-				<h2>Por mes te entran: </h2>
-				<h2>Mientras que todos los meses salen: </h2>
-				<h2>Por lo que el balance es: </h2>
-				<h1 id="mensaje"></h1>
+				<h2 id="entraMes">Por mes te entran: </h2>
+				<h2 id="saleMes">Mientras que todos los meses salen: </h2>
+				<h2 id="balanceTotal">Por lo que el balance es: </h2>
 			</div>
 		</section>
 
