--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 						<ul class="links">
 							<li><a href="registros.html">Registros</a></li>
 							<li><a href="balance.html">Balance</a></li>
-							<li><a href="configuracion.html">Configuración</a></li>
+							<li><a href="documentacion.html">Documentación</a></li>
 						</ul>
 					</nav>
 
