--- a/principal.html
+++ b/principal.html
@@ -68,19 +68,10 @@
         </article>
         <article>
             <span class="image">
-                <img src="images/pic05.jpg" alt="" />
-            </span>
-            <header class="major">
-                <h3><a href="configuracion.html" class="link simple-link">Configuración</a></h3>
-                <p>Los seteos claves</p>
-            </header>
-        </article>
-        <article>
-            <span class="image">
                 <img src="images/pic06.jpg" alt="" />
             </span>
             <header class="major">
-                <h3><a href="elements.html" class="link simple-link">Como usar la app</a></h3>
+                <h3><a href="documentacion.html" class="link simple-link">Como usar la app</a></h3>
                 <p>Ver la documentación</p>
             </header>
         </article>
