posibilidad de borrar los datos

--- a/documentacion.html
+++ b/documentacion.html
@@ -12,6 +12,7 @@
 					<p>Agregá tus salidas o entradas en dólares americanos.</p>
 					<p>Seleccioná la frecuencia de las mismas.</p>
 					<p>Revisá tus números, y tomá buenas decisiones!</p>
+					<p><a class="button next scrolly" onclick="vaciar()">Vaciá tus datos acá</a></p>
 				</div>
 			</section>
 
