--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						
 					<div class="row">
 						<div class="column">
-							Cantidad<input type="text" name="amount">
+							<label for="amount">Cantidad</label><input type="text" name="amount">
 						</div>
 						<div class="column">
 							<label for="repeticion">Repetición</label>
@@ -84,6 +84,7 @@
 							<li><a href="registros.html">Registros</a></li>
 							<li><a href="balance.html">Balance</a></li>
 							<li><a href="documentacion.html">Documentación</a></li>
+							<li><a onclick="vaciar()">Vaciar datos</a></li>
 						</ul>
 					</nav>
 
